--- a/css/cssindex.css
+++ b/css/cssindex.css
@@ -9,25 +9,24 @@ body{
   background-size: cover;
 }
 .linia{
-animation: colorRotate 7s linear 0s infinite;
-animation-fill-mode: forwards;
+animation: colorRotate 10s linear 0s infinite;
 }
 
 @keyframes colorRotate {
   from {
-    border-bottom: 5px solid #6666ff;
+    border-bottom: 2px solid #6666ff;
   }
   10% {
-    border-bottom: 5px solid #0099ff;
+    border-bottom: 2px solid #0099ff;
   }
   50% {
-    border-bottom: 5px solid #00ff00;
+    border-bottom: 2px solid #00ff00;
   }
   75% {
-    border-bottom: 5px solid #ff3399;
+    border-bottom: 2px solid #ff3399;
   }
   100% {
-    border-bottom: 5px solid #6666ff;
+    border-bottom: 2px solid #6666ff;
   }
 }
 
@@ -68,4 +67,43 @@ animation-fill-mode: forwards;
   .menu, .main, .right {
     width:100%;
   }
+}
+
+/*Carrussel usuario*/
+
+.Tusuario {
+    color: #fff;
+    margin: 7px 0;
+    font-size: 25px;
+    font-weight: 600;
+    text-shadow: 2px 2px 1px rgba(0,0,0,0.7);
+    margin-top: 270px;
+}
+
+
+.carousel .carousel-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+  width: 300px;
+  height: 300px;
+}
+.carousel .carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 25px;
+}
+
+.carousel .indicators .indicator-item {
+  border-radius: 0;
+  transform: rotate(45deg);
+  margin: 0 15px;
+  background: #36221c;
 }
