--- a/css/CssAdminPagina.css
+++ b/css/CssAdminPagina.css
@@ -33,7 +33,7 @@ animation: colorRotate 10s linear 0s infinite;
 
 .menu {
   float:left;
-  width:18%;
+  width:8%;
   text-align:center;
   padding:0 20px;
   margin: 1%;
@@ -41,26 +41,19 @@ animation: colorRotate 10s linear 0s infinite;
   box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
   border-radius: 10px;
 }
+
 .top {
-  width:60%;
+  width:80%;
   text-align:center;
-  padding:0 20px;
   margin: auto;
   background: #fff;
   box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
   border-radius: 10px;
 }
-.menu a {
-  background-color:#e5e5e5;
-  padding:8px;
-  margin-top:7px;
-  display:block;
-  width:100%;
-  color:black;
-}
+
 .main {
   float:left;
-  width:38%;
+  width:51%;
   padding:0 20px;
   margin: 1%;
   background: #fff;
@@ -100,52 +93,167 @@ animation: colorRotate 10s linear 0s infinite;
     width:100%;
   }
 }
-.button {
-  background-color: #4CAF50; /* Green */
+/*formulari*/
+:root{
+  --colorTextos: #49454567;
+}
+.contenedor .form{
+  font-family: 'Roboto';
+  float:left;
+  width:25%;
+  text-align:center;
+  padding:0 20px;
+  margin: 1%;
+  background: #fff;
+  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+}
+
+h1{
+  text-align: center;
+  color: #B06AB3;
+}
+h4{
+  text-align: left;
+  color: #B06AB3;
+}
+.titol{
+  color: black;
+}
+
+.form{
+  background: #fff;
+  padding: 40px 0;
+  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+}
+
+.form{
+  width: 100%;
+  margin: auto;
+}
+
+.form .grupo{
+  position: relative;
+  margin: 45px;
+
+}
+
+.form input{
+  background: none;
+  color:#c6c6c6;
+  font-size: 18px;
+  padding: 10px 10px 10px 5px;
+  display: block;
+  width: 100%;
   border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  border-bottom: 1px solid var(--colorTextos);
+}
+
+input:focus{
+  outline: none;
+  color: rgb(94, 93, 93);
+}
+
+.label{
+  color: var(--colorTextos);
   font-size: 16px;
-  margin: 4px 2px;
+  position: absolute;
+  bottom: 0;
+  left: 5px;
+  top: 10px;
+  transition: 0.5s ease all;
+  pointer-events: none;
+}
+
+.dataN{
+  top: -14px;
+  font-size: 16px;
+  color: var(--colorTextos);
+}
+
+input:focus~.label,
+input:valid~.label{
+  top: -14px;
+  font-size: 12px;
+  color: #2196f3;
+}
+
+.barra{
+  position: relative;
+  display: block;
+  width: 100%;
+}
+
+.barra::before{
+  content: "";
+  height: 2px;
+  width: 0%;
+  bottom: 0;
+  position: absolute;
+  background: linear-gradient(to right, #B06AB3, #4568DC);
+  transition: 0.3 ease width;
+  left: 0;
+}
+
+input:focus~.barra::before{
+  width: 100%;
+}
+
+.button{
+  font-family: 'roboto';
+  background: #4568DC;
+  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+  background: linear-gradient(to right, #B06AB3, #4568DC);
+  border: none;
+  display: block;
+  width: 80%;
+  margin: 10px auto;
+  color: #fff;
+  height: 40px;
+  font-size: 16px;
   cursor: pointer;
 }
-
-.button1 {
-  background-color: white;
-  color: black;
-  border: 2px solid #4CAF50;
-}
-
-.button2 {
-  background-color: white;
-  color: black;
-  border: 2px solid #008CBA;
-  padding: 5px 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+.button2{
+  font-family: 'roboto';
+  background: #4568DC;
+  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+  background: linear-gradient(to right, #B06AB3, #4568DC);
+  border: none;
+  float:left;
+  margin: 10px auto;
+  color: #fff;
+  height: 40px;
   font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
+  border-radius: 10px;
 }
-
-.button3 {
-  background-color: white;
-  color: black;
-  border: 2px solid #f44336;
+.button3{
+  font-family: 'roboto';
+  background: #4568DC;
+  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+  background: linear-gradient(to right, #B06AB3, #4568DC);
+  border: none;
+  display: block;
+  width: 100%;
+  margin: 10px auto;
+  color: #fff;
+  height: 40px;
+  font-size: 16px;
+  border-radius: 10px;
 }
+.buttonn{
+  font-family: 'roboto';
+  background: #4568DC;
+  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+  background: linear-gradient(to right, #B06AB3, #4568DC);
+  border: none;
+  margin: 10px auto;
+  width: 60px;
+  color: #fff;
+  height: 40px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 10px;
 
-.button4 {
-  background-color: white;
-  color: black;
-  border: 2px solid #e7e7e7;
-}
-
-.button5 {
-  background-color: white;
-  color: black;
-  border: 2px solid #555555;
 }
