--- a/css/CssAdminPagina2.css
+++ b/css/CssAdminPagina2.css
@@ -80,10 +80,25 @@ animation: colorRotate 10s linear 0s infinite;
   border-radius: 10px;
 }
 
+.comentaris{
+  float:left;
+  width:78%;
+  text-align:center;
+  padding:0 20px;
+  margin: 1%;
+  margin-left: 11%;
+  margin-top: -1%;
+  background: #fff;
+  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+}
+
 .footer{
+  float:left;
   text-align:center;
   padding:10px;
   margin-top:10px;
+  margin-left: 20%;
   border-radius: 40px;
 }
 
@@ -256,4 +271,60 @@ input:focus~.barra::before{
   cursor: pointer;
   border-radius: 10px;
 
+}
+
+/* Taula Filtre */
+#resultat {
+font-family: Arial, Helvetica, sans-serif;
+border-collapse: collapse;
+width: 100%;
+text-align: center;
+margin-bottom: 30px;
+}
+
+#resultat td, #resultat th {
+border: 1px solid #ddd;
+padding: 8px;
+}
+
+#resultat tr:nth-child(even){background-color: #f2f2f2;}
+
+#resultat .trr:hover {background-color: #ddd;}
+
+#resultat th {
+padding-top: 12px;
+padding-bottom: 12px;
+text-align: left;
+color: white;
+text-align: center;
+}
+
+.tr{
+  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+  background: linear-gradient(to right, #B06AB3, #4568DC);
+}
+
+
+.button99 {
+background-color: #4CAF50;
+border: none;
+color: white;
+padding: 10px 22px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 14px;
+margin: 1px 1px;
+margin-right: 5px;
+cursor: pointer;
+border-radius: 25px;
+}
+.button98 {background-color: #008CBA;}
+.button97 {background-color: #f44336;}
+.button96 {background-color: #555555;}
+.button95 {background-color: purple;}
+
+#productes{
+  height: 700px;
+  overflow: auto;
 }
