--- a/css/CssAdminPaginaUpdate2.css
+++ b/css/CssAdminPaginaUpdate2.css
@@ -80,18 +80,6 @@ animation: colorRotate 10s linear 0s infinite;
   border-radius: 10px;
 }
 
-.comentaris{
-  float:left;
-  width:78%;
-  text-align:center;
-  padding:0 20px;
-  margin: 1%;
-  margin-left: 11%;
-  margin-top: -1%;
-  background: #fff;
-  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
-  border-radius: 10px;
-}
 
 .footer{
   float:left;
@@ -183,8 +171,8 @@ input:focus{
 
 .dataN{
   top: -14px;
-  font-size: 16px;
-  color: var(--colorTextos);
+  font-size: 12px;
+  color: #2196f3;
 }
 
 input:focus~.label,
@@ -300,8 +288,7 @@ text-align: center;
 }
 
 .tr{
-  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
-  background: linear-gradient(to right, #B06AB3, #4568DC);
+  background-color: #008CBA;
 }
 
 
@@ -319,12 +306,13 @@ margin-right: 5px;
 cursor: pointer;
 border-radius: 25px;
 }
-.button98 {background-color: #008CBA;}
+.button98 {background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+background: linear-gradient(to right, #B06AB3, #4568DC);}
 .button97 {background-color: #f44336;}
 .button96 {background-color: #555555;}
 .button95 {background-color: purple;}
 
 #productes{
-  height: 700px;
+  height: 928px;
   overflow: auto;
 }
