--- a/css/CssUsuarisPagina30.css
+++ b/css/CssUsuarisPagina30.css
@@ -48,6 +48,14 @@ animation: colorRotate 10s linear 0s infinite;
   width:100%;
   color:black;
 }*/
+.top {
+  width:80%;
+  text-align:center;
+  margin: auto;
+  background: #fff;
+  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+}
 
 .button {
   background-color: #4CAF50; /* Green */
@@ -81,10 +89,19 @@ animation: colorRotate 10s linear 0s infinite;
   cursor: pointer;
 }
 
-.button3 {
-  background-color: white;
-  color: black;
-  border: 2px solid #f44336;
+.button3{
+  font-family: 'roboto';
+  background: #4568DC;
+  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+  background: linear-gradient(to right, #B06AB3, #4568DC);
+  border: none;
+  display: block;
+  width: 100%;
+  margin: 10px auto;
+  color: #fff;
+  height: 40px;
+  font-size: 16px;
+  border-radius: 10px;
 }
 
 .button4 {
@@ -98,7 +115,20 @@ animation: colorRotate 10s linear 0s infinite;
   color: black;
   border: 2px solid #555555;
 }
-
+.button6{
+  font-family: 'roboto';
+  background: #4568DC;
+  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);
+  background: linear-gradient(to right, #B06AB3, #4568DC);
+  border: none;
+  float:left;
+  margin: 10px auto;
+  color: #fff;
+  height: 40px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 10px;
+}
 .rotlos{
   border: 2px solid orange;
   width:20%;
@@ -128,6 +158,11 @@ h1{
   color: #B06AB3;
   padding-top: 20px;
 }
+h3{
+  text-align: left;
+  color: #B06AB3;
+  padding-top: 10px;
+}
 .button2{
   font-family: 'roboto';
   background: #4568DC;
@@ -150,12 +185,7 @@ h1{
   text-align:center;
 }
 
-.footer{
-  text-align:center;
-  padding:10px;
-  margin-top:10px;
-  border-radius: 40px;
-}
+
 
 @media only screen and (max-width:620px) {
   /* For mobile phones: */
@@ -276,4 +306,28 @@ h1{
   position: absolute;
   right: -25px;
   top: -20px;
+}
+
+/* comentaris */
+.comentaris{
+  float:left;
+  width:70%;
+  text-align:center;
+  padding-left: 20px;
+  margin: 1%;
+  margin-left: 15%;
+  margin-top: 1.5%;
+  background: #fff;
+  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+}
+.right {
+  float:left;
+  width:18%;
+  padding:0 20px;
+  text-align:center;
+  margin: 1%;
+  background: #fff;
+  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
 }
